pizzalair/static/pizzalair/css/style.css
@font-face {
    font-family: "Gliker";
    src: local("Gliker"),
            url("../fonts/Gliker-Regular.otf") format("opentype");
}

body {
    margin: 90px 0;
    background-image:
      linear-gradient(45deg, #18BE72 25%, transparent 25%),
      linear-gradient(135deg, #18BE72 25%, transparent 25%),
      linear-gradient(45deg, transparent 75%, #18BE72 75%),
      linear-gradient(135deg, transparent 75%, #18BE72 75%);
    background-size:26px 26px; /* Must be a square */
    background-position:0 0, 12.5px 0, 12.5px -12.5px, 0px 12.5px;
    background-attachment: fixed;
}
header .page,
.body .page,
footer .page {
    width: calc(1280px - 50px - 50px);
    max-width: calc(100% - 50px - 50px);
    margin: auto;
    padding: 0 50px;
}
header .page,
footer .page {
    max-width: calc(100% - 50px - 50px - 38px - 38px);
}

header {
    height: 90px;
    width: 100%;
    box-shadow: 0 0 15px rgba(0,0,0,0.15);
    overflow: hidden;
    background: white;
    position: fixed;
    top: 0;
    left: 0;
}
    header .page {
        display: flex;
        align-items: center;
        justify-content: space-between;
        height: 100%;
    }
    header .page h1 {
    }
    header .page nav {
        grid-area: menu;
        display: flex;
        justify-content: right;
        align-items: center;
        gap: 20px;
    }
    header .page nav a {
        display: inline-block;
    }

.body {
    background: white;
    margin: 0 37px;
    min-height: calc(100vh - 90px - 90px);
    overflow: hidden;
    font-family: Gliker, sans-serif;
    color: #18BE72;
}
    .body .page {
        padding: 50px 0;
    }

footer {
    background: white;
    bottom: 0;
    left: 0;
    width: 100%;
    height: 90px;
    box-shadow: 0 0 15px rgba(0,0,0,0.15);
    position: fixed;
}
    footer .page {
        height: 100%;
        display: flex;
        justify-content: space-between;
        align-items: center;
    }
    footer .page .contact {
        display: flex;
        gap: 20px;
    }
    footer .page .social .icon {
        display: flex;
        align-items: center;
        gap: 10px;
    }
    footer .page .social .icon img {
        width: 35px;
        height: 35px;
    }

h1, h2, h3, p {
    font-family: Gliker, sans-serif;
    color: #18BE72;
    border: 5px ;
}

a {
    font-family: Gliker, serif;
    color: #18BE72;
}
a:hover {
    text-decoration: underline;
}

a.btn {
    display: inline-block;
    box-shadow: 2px 2px 0px #18BE72;
    font-size: 24px;
    border: 1px solid #18BE72;
    border-radius: 4px;
    padding: 4px 10px 3px 10px;
    text-align: center;
}
a.btn.small {
    font-size: 18px;
}
a.btn.large {
    font-size: 30px;
}

a.btn.small {

}

a.btn:active {
    box-shadow: inset 2px 2px #18BE72;
}
.submenu {
    display: flex;
    justify-content: center;
    gap: 20px;
    min-width: 100px;
    margin: 0 0 50px 0;
}
.submenu a{
    display: inline-block;
    vertical-align: top;
}

a{
    text-decoration: none;
}

.submenu a:active {
    box-shadow: inset 2px 2px #18BE72;
}

form label{
    font-family: Gliker, sans-serif;
    color: #18BE72;
}



input {
    background-color: #18BE7250;
    border: none;
    border-radius: 5px;
    width: 350px;
    margin-bottom: 10px;
    padding: 10px 10px;
    box-sizing: border-box;
}

footer {
    font-family: Gliker, sans-serif;
    color: #18BE72;
}

button {
    font-family: Gliker, sans-serif;
    color: #18BE72;
    box-shadow: 2px 2px #18BE72;
    text-align: center;
    vertical-align: top;
    border: 1px solid #18BE72;
    border-radius: 3px;
    padding-left: 12px;
    padding-right: 12px;
    padding-top: 5px;
    padding-bottom: 3px;
}

button:active {
    box-shadow: inset 2px 2px #18BE72;
}

footer {
    background: #ffffff;
    color: #18BE72;
    font-family: Gliker, sans;
}
footer > p{
   word-spacing:10px;
}

/*.popup{
    display:flex;
    flex-direction: column;

}

.beverage{
    color:#18BE72;
    font-family: gliker, sans;
}

.popup > .left{
    background:#ffffff;
}

.popup > .right {
   background: #18BE72;
}
*/
body.overlay {
    overflow: hidden;
}
body.overlay .popup-overlay {
    display: flex;
}
.popup-overlay {
    position: absolute;
    left: 0;
    top: 0;
    width: 100vw;
    height: 100vh;
    background: rgba(0,0,0,0.4);
    display: none;
    justify-content: center;
    align-items: center;
}
.popup {
    width: 60%;
    height: 55%;
    background: white;
    border: 2px solid #18BE72;
    border-radius: 20px;
    box-shadow: 0 0 20px rgba(0,0,0,0.15);
    display: flex;
    overflow: hidden;
}
    .popup .left,
    .popup .right {
        height: 100%;
        flex: 1;
    }
    .popup .left {
    }
    .popup .right {
        background: #18BE72;
    }

p {
    font-size: 12px;
}

.product-list {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    gap: 30px;
}

.card {
    box-shadow: 5px 5px 20px rgba(0,0,0,0.1);
    border-radius: 20px;
    overflow: hidden;
    position: relative;
    padding: 0 0 30px 0;
}
    .card a {
        display: block;
        position: relative;
    }
    .card img.thumb {
        width: 100%;
    }
    .card .label {
        position: absolute;
        bottom: 0;
        left: 0;
        width: calc(100% - 20px - 20px);
        color: white;
        background: #18BE72;
        border-radius: 13px;
        padding: 15px 20px;
    }
    .card .label a,
    .card .label p {
        color: white;
        margin: 0;
    }

